k3s_cluster/base/private/code/comfyui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-code-comfyui
spec:
  type: ClusterIP
  selector:
    app: private-code-comfyui
  ports:
    - name: web
      protocol: TCP
      port: 4435
      targetPort: 8188
