k3s_cluster/base/private/code/comfyui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-code-comfyui
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`comfyui.code.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-code-comfyui-service
          port: 4435
          # tls: {}
